--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "enzyme": "^3.9.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
@@ -33,6 +34,7 @@
     ]
   },
   "devDependencies": {
+    "enzyme-adapter-react-16": "^1.13.2",
     "node-sass": "^4.12.0"
   }
 }
